# opengl-rs

./: Cargo.toml
play/: README.md
play/01_triangle/: triangle.frag  triangle.vert
play/01_triangle/shaders/: 01_ins-and-outs.frag  01_ins-and-outs.vert
src/: camera.rs  common.rs  cubemap.rs  lib.rs  macros.rs  mesh.rs  model.rs  point_light.rs  scene.rs  shader.rs  util.rs
src/01_getting_started/: 01_hello_window.rs  02_0_hello_triangle.rs  02_1_hello_triangle_indexed.rs  02_hello_window_clear.rs  03_0_hello_triangle.rs  03_1_hello_triangle_indexed.rs  03_1_shaders_uniform.frag  03_1_shaders_uniform.rs  03_2_shaders_interpolation.rs  03_2_shaders_interpolation.vert  03_2_shaders_interpolation_ex1.rs  03_2_shaders_interpolation_ex2.rs  03_2_shaders_interpolation_ex2.vert  03_2_shaders_interpolation_ex3.frag  03_2_shaders_interpolation_ex3.rs  03_2_shaders_interpolation_ex3.vert  03_hello_triangle.rs  04_0_shaders_uniform.rs  04_1_textures.frag  04_1_textures.rs  04_2_textures_combined.frag  04_2_textures_combined.rs  04_2_textures_combined.vert  05_1_transformations.rs  05_1_transformations.vert  05_1_transformations_ex2.rs  06_1_coordinate_systems.rs  06_2_coordinate_systems_depth.rs  06_3_coordinate_systems_ex3.rs  06_3_coordinate_systems_multiple.rs  06_3_coordinate_systems_translate.rs  06_coordinate_systems.frag  06_coordinate_systems.vert  07_1_camera_circle.rs  07_2_camera_keyboard.rs  07_4_camera_class.rs  chapter.rs  common.rs
src/ch02_lighting/: mod.rs
src/ch02_lighting/01_1_colors/: colors.frag  main.rs
src/ch02_lighting/01_2_basic_diffuse/: cube.frag  cube.vert  lamp.vert  main.rs
src/ch02_lighting/02_1_basic_diffuse/: cube.frag  cube.vert  main.rs
src/ch02_lighting/02_2_basic_specular/: cube.frag  main.rs
src/ch02_lighting/02_basic_ex1/: cube.frag  main.rs
src/ch02_lighting/02_basic_ex2/: cube.frag  cube.vert  main.rs
src/ch02_lighting/03_1_materials/: cube.frag  main.rs
src/ch02_lighting/04_1_diffuse_maps/: cube.frag  main.rs
src/ch02_lighting/04_2_specular_maps/: cube.frag  cube.vert  main.rs
src/ch02_lighting/04_2_specular_maps_ex4/: cube.frag  main.rs
src/ch02_lighting/05_1_light_casters_directional/: cube.frag  main.rs
src/ch02_lighting/05_2_light_casters_point/: cube.frag  main.rs
src/ch02_lighting/05_3_light_casters_spot/: cube.frag  main.rs
src/ch02_lighting/05_4_light_casters_spot_soft/: cube.frag  main.rs
src/ch02_lighting/06_1_multiple_lights/: cube.frag  main.rs
src/ch03_model_loading/: main.rs
src/ch03_model_loading/01_1_load_model/: main.rs
src/ch03_model_loading/01_2_load_model_with_lights/: lamp.frag  main.rs  shader.frag  shader.vert
src/ch04_advanced_opengl/: mod.rs
src/ch04_advanced_opengl/01_1_depth_testing/: main.rs  main_sponza.rs  shader_sponza.frag  shader_sponza.vert
src/ch04_advanced_opengl/01_depth_testing/: main.rs  main_sponza.rs  shader.frag  shader.vert  shader_sponza.frag
src/ch04_advanced_opengl/02_stencil_testing/: main.rs  shader_single_color.frag
src/ch04_advanced_opengl/03_1_blending_discard/: main.rs  shader.frag
src/ch04_advanced_opengl/03_2_blending_sorted/: main.rs
src/ch04_advanced_opengl/05_1_framebuffers/: main.rs  screen_shader.frag  screen_shader.vert
src/ch04_advanced_opengl/05_ex1_mirror/: main.rs  mirror_shader.frag  mirror_shader.vert
src/ch04_advanced_opengl/06_1_cubemaps_skybox/: main.rs  skybox_shader.frag  skybox_shader.vert
src/ch04_advanced_opengl/06_2_cubemaps_env_mapping/: main.rs  reflect_shader.frag  refract_shader.frag  refract_shader.vert
src/tests/: mod.rs  projections.rs  transformations.rs
