[package]
name = "opengl-rs"
version = "0.1.0"
authors = ["Thorsten Lorenz <thlorenz@gmx.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.14.0"
glfw = "0.39.1"
image = "0.23.8"


[[bin]]
name="01_01_hello_window"
path="./src/01_getting_started/01_hello_window.rs"
