[package]
name = "opengl"
version = "0.1.0"
authors = ["Thorsten Lorenz <thlorenz@gmx.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.14.0"
glfw = "0.39.1"
image = "0.23.8"


[[bin]]
name="01_01_hello_window"
path="./src/01_getting_started/01_hello_window.rs"

[[bin]]
name="01_02_hello_window_clear"
path="./src/01_getting_started/02_hello_window_clear.rs"

[[bin]]
name="01_02_0_hello_triangle"
path= "src/01_getting_started/02_0_hello_triangle.rs"

[[bin]]
name="01_02_1_hello_triangle_indexed"
path= "src/01_getting_started/02_1_hello_triangle_indexed.rs"

[[bin]]
name="01_03_1_shaders_uniform"
path= "src/01_getting_started/03_1_shaders_uniform.rs"
