[package]
name = "opengl"
version = "0.1.0"
authors = ["Thorsten Lorenz <thlorenz@gmx.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.14.0"
glfw = "0.39.1"
image = "0.23.8"
nalgebra-glm = "0.7.0"
tobj = "2.0.2"

[[bin]]
name="01_01_hello_window"
path="./src/01_getting_started/01_hello_window.rs"

[[bin]]
name="01_02_hello_window_clear"
path="./src/01_getting_started/02_hello_window_clear.rs"

[[bin]]
name="01_02_0_hello_triangle"
path= "src/01_getting_started/02_0_hello_triangle.rs"

[[bin]]
name="01_02_1_hello_triangle_indexed"
path= "src/01_getting_started/02_1_hello_triangle_indexed.rs"

[[bin]]
name="01_03_1_shaders_uniform"
path= "src/01_getting_started/03_1_shaders_uniform.rs"

[[bin]]
name="01_03_2_shaders_interpolation"
path= "src/01_getting_started/03_2_shaders_interpolation.rs"

[[bin]]
name="01_03_2_shaders_interpolation_ex1"
path= "src/01_getting_started/03_2_shaders_interpolation_ex1.rs"

[[bin]]
name="01_03_2_shaders_interpolation_ex2"
path= "src/01_getting_started/03_2_shaders_interpolation_ex2.rs"

[[bin]]
name="01_04_1_textures"
path= "src/01_getting_started/04_1_textures.rs"

[[bin]]
name="01_04_2_textures_combined"
path= "src/01_getting_started/04_2_textures_combined.rs"

[[bin]]
name="01_05_1_transformations"
path= "src/01_getting_started/05_1_transformations.rs"

[[bin]]
name="01_05_1_transformations_ex2"
path= "src/01_getting_started/05_1_transformations_ex2.rs"

[[bin]]
name="01_06_1_coordinate_systems"
path= "src/01_getting_started/06_1_coordinate_systems.rs"

[[bin]]
name="01_06_2_coordinate_systems_depth"
path= "src/01_getting_started/06_2_coordinate_systems_depth.rs"

[[bin]]
name="01_06_3_coordinate_systems_multiple"
path= "src/01_getting_started/06_3_coordinate_systems_multiple.rs"

[[bin]]
name="01_06_3_coordinate_systems_ex3"
path= "src/01_getting_started/06_3_coordinate_systems_ex3.rs"

[[bin]]
name="01_06_3_coordinate_systems_translate"
path= "src/01_getting_started/06_3_coordinate_systems_translate.rs"

[[bin]]
name="01_07_1_camera_circle"
path= "src/01_getting_started/07_1_camera_circle.rs"

[[bin]]
name="01_07_2_camera_keyboard"
path= "src/01_getting_started/07_2_camera_keyboard.rs"

[[bin]]
name="01_07_4_camera_class"
path= "src/01_getting_started/07_4_camera_class.rs"

[[bin]]
name="ch02_01_1_colors"
path= "src/ch02_lighting/01_1_colors/main.rs"

[[bin]]
name="ch02_02_1_basic_diffuse"
path= "src/ch02_lighting/02_1_basic_diffuse/main.rs"

[[bin]]
name="ch02_02_2_basic_specular"
path= "src/ch02_lighting/02_2_basic_specular/main.rs"

[[bin]]
name="ch02_02_basic_ex1"
path= "src/ch02_lighting/02_basic_ex1/main.rs"

[[bin]]
name="ch02_02_basic_ex2"
path= "src/ch02_lighting/02_basic_ex2/main.rs"

[[bin]]
name="ch02_03_1_materials"
path= "src/ch02_lighting/03_1_materials/main.rs"

[[bin]]
name="ch02_04_1_diffuse_maps"
path= "src/ch02_lighting/04_1_diffuse_maps/main.rs"

[[bin]]
name="ch02_04_2_specular_maps"
path= "src/ch02_lighting/04_2_specular_maps/main.rs"

[[bin]]
name="ch02_04_2_specular_maps_ex4"
path= "src/ch02_lighting/04_2_specular_maps_ex4/main.rs"

[[bin]]
name="ch02_05_1_light_casters_directional"
path= "src/ch02_lighting/05_1_light_casters_directional/main.rs"

[[bin]]
name="ch02_05_2_light_casters_point"
path= "src/ch02_lighting/05_2_light_casters_point/main.rs"

[[bin]]
name="ch02_05_3_light_casters_spot"
path= "src/ch02_lighting/05_3_light_casters_spot/main.rs"

[[bin]]
name="ch02_05_4_light_casters_spot_soft"
path= "src/ch02_lighting/05_4_light_casters_spot_soft/main.rs"

[[bin]]
name="ch02_06_1_multiple_lights"
path= "src/ch02_lighting/06_1_multiple_lights/main.rs"

[[bin]]
name="ch03_01_1_load_model"
path= "src/ch03_model_loading/01_1_load_model/main.rs"

[[bin]]
name="ch03_01_2_load_model_with_lights"
path= "src/ch03_model_loading/01_2_load_model_with_lights/main.rs"

[[bin]]
name="ch04_01_1_depth_testing"
path= "src/ch04_advanced_opengl/01_1_depth_testing/main.rs"

[[bin]]
name="ch04_01_1_depth_testing_sponza"
path= "src/ch04_advanced_opengl/01_1_depth_testing/main_sponza.rs"
